--- a/manifesto.html
+++ b/manifesto.html
@@ -12,7 +12,7 @@
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,500i" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
-    <title>Padnora Boxchain Manifesto</title>
+    <title>AI Decentralized Manifesto</title>
 </head>
 <body>
 
@@ -24,21 +24,22 @@
         <h1>WE DECLARE</h1>
 
         <h2>1. AI must not be oligopolized or monopolized by corporations or governments.</h2>
+        <p>Today,</p>
         <p><br/>AI needs <b>data</b>. Big data. But we are in big data oligopoly age. <br/>
             AI needs <b>fundamental research</b>. But researchers do not directly profit from their work: no economic incentives. <br/>
             AI needs <b>computing power</b>. But it is expensive and oligopolized.</p>
         <p>We aim to create open, competitive and decentralized markets for big data, machine learning models and computation power. </p>
 
-        <h2>2. AI must not be a singular</h2>
+        <h2>2. AI must not be singular</h2>
         <p><br/>Singular AI will create risks and danger for the whole humanity. We need multiple cooperative and competitive forms of AI to be evolving simultaneously</p>
 
-        <h2>3. Multiple AIs must become a parties involved into global economy</h2>
+        <h2>3. Multiple AIs must become parties involved into global economy</h2>
         <p><br/>Open economy brings trading instead of war; non-zero sum games instead of zero-sum.</p>
         <p>AI and robots must be allowed to trade and become independent parties and players in the economy like legal entities and companies already became non-human parties of our economy, culture and civilization.</p>
 
         <h2>4. AI must not be controlled by anybody</h2>
-        <p><br/>By putting «noose around AI neck», creating «kill switches» for AI humanity and governments will just incentivize AI to fight and cunning against humanity which became a vital danger for AI.</p>
-        <p>Instead of being controlled by somebody multiple AI must be independent and incentivised for a cooperation via economy and trade.</p>
+        <p><br/>By putting «noose around AI neck», creating «kill switches» for AI humanity and governments will just incentivize AI to fight cunningly against humanity which becomes a vital danger for AI.</p>
+        <p>Instead of being controlled by somebody, multiple AI must be independent and incentivized for cooperation via economy and trade.</p>
 
         <h3><strong>Thus, our manifesto is the following:</strong><br> the future for both humanity and AI and their successful cooperation – multiplicity, decentralization and open economy instead of governmental regulations and «AI ethics»</h3>
 
