--- a/src/index.html
+++ b/src/index.html
@@ -26,11 +26,11 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	
-	<link rel="shortcut icon" href="favicon.ico" />	
+	<!-- <link rel="shortcut icon" href="favicon.ico" />	
     <link rel="icon" type="image/png" href="favicon_16.png" sizes="16x16" />
     <link rel="icon" type="image/png" href="favicon_32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="favicon_64.png" sizes="64x64" />
-    <link rel="apple-touch-icon" href="favicon_64.png" />
+    <link rel="apple-touch-icon" href="favicon_64.png" /> -->
 
 	<!-- Twitter: see https://developer.twitter.com/en/docs/tweets/optimize-with-cards/overview/summary for details -->
 	<meta name="twitter:card" content="<%= options.twitter.card %>">
