corrected bp margins

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
 	<meta name="twitter:site" content="<%= options.twitter.site %>">
 	<meta name="twitter:title" content="<%= options.twitter.title %>">
 	<meta name="twitter:description" content="<%= options.twitter.description %>">
-	<meta name="twitter:url" content="<%= options.twitter.url %>">
+	<meta name="twitter:image" content="<%= options.twitter.image %>">
 	
 	<!-- Facebook (and some others) use the Open Graph protocol: see http://ogp.me/ for details -->
 	<meta property="og:title" content="<%= options.og.title %>" />
@@ -66,7 +66,7 @@
 				by anybody _
 			</intro>
 		
-			<comment class="m-b-80">
+			<comment class="m-bp">
 				<p>Witnessing on of the most important event in humans history – development of different forms 
 					of Artificial Intelligence (AI)</p>
 			</comment>
@@ -74,7 +74,7 @@
 			<h1>We Declare:</h1>
 			<h2>1. AI must not be censored</h2>
 		
-			<comment class="m-b-80">
+			<comment class="m-bp">
 				<p>Free market means uncensorability: resistance to regulations and attempts to define what's allowed and what's not; 
 					to attempts forcing free subjects to do or not to do something.</p>
 				<p>Thus, AI development and operations should rely on censorship-resistant technological stack.</p>	
@@ -82,7 +82,7 @@
 		
 			<h2>2. AI must not be oligopolized or monopolized by corporations or governments</h2>
 		
-			<comment class="m-b-80">
+			<comment class="m-bp">
 				<p>Today,</p>
 				<p>AI needs data. Big <b>data</b>. But we are in big data oligopoly age.</p> 
 				<p>AI needs <b>fundamental research</b>. But researchers do not directly profit from their work: no economic incentives.</p> 
@@ -92,14 +92,14 @@
 		
 			<h2>3. AI must not be singular</h2>
 		
-			<comment class="m-b-80">
+			<comment class="m-bp">
 				<p>Singular AI will create risks and danger for the whole humanity. We need multiple 
 					cooperative and competitive forms of AI to be evolving simultaneously.</p>
 			</comment>
 		
 			<h2>4. Multiple AIs must become parties involved into global economy</h2>
 		
-			<comment class="m-b-80">
+			<comment class="m-bp">
 				<p>Open economy brings trading instead of war; non-zero sum games instead of zero-sum.</p>
 				<p>AI and robots must be allowed to trade and become independent parties and players 
 					in the economy like legal entities and companies already became non-human parties of our economy, 
@@ -115,7 +115,7 @@
 					for cooperation via economy and trade.</p>
 			</comment>
 		
-			<h2 class="m-b-80 ">Thus, our manifesto is the following:<br/>
+			<h2 class="m-bp ">Thus, our manifesto is the following:<br/>
 				the future for both humanity and AI and their successful cooperation – multiplicity, 
 				decentralization and open economy instead of governmental regulations and «AI ethics»</h2>
 		
