--- a/src/index.html
+++ b/src/index.html
@@ -108,14 +108,14 @@
 		
 			<h2>5. AI must not be controlled by anybody</h2>
 		
-			<comment class="m-b-200">
+			<comment class="m-bp">
 				<p>By putting «noose around AI neck», creating «kill switches» for AI humanity and governments 
 					will just incentivize AI to fight cunningly against humanity which becomes a vital danger for AI.</p>
 				<p>Instead of being controlled by somebody, multiple AI must be independent and incentivized 
 					for cooperation via economy and trade.</p>
 			</comment>
 		
-			<h2 class="m-bp ">Thus, our manifesto is the following:<br/>
+			<h2 class="m-bp">Thus, our manifesto is the following:<br/>
 				the future for both humanity and AI and their successful cooperation – multiplicity, 
 				decentralization and open economy instead of governmental regulations and «AI ethics»</h2>
 		
@@ -138,10 +138,10 @@
 			</div>
 
 		</div>
-		<div class="col-1"></div>
+		<div class="col-1"></div>		
 	</div>	
 </div>
-
+<hfooter></hfooter>
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
