--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,6 @@
 	<meta http-equiv="cleartype" content="on" />
 
 	<title><%= options.title %></title>
-	<meta name="author" content="<%= options.author %>" />
 	<meta name="description" content="<%= options.description %>" />
 
 	<!-- Don't forget to set your site up: http://google.com/webmasters -->
@@ -26,11 +25,22 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	
-	<!-- <link rel="shortcut icon" href="favicon.ico" />	
-    <link rel="icon" type="image/png" href="favicon_16.png" sizes="16x16" />
-    <link rel="icon" type="image/png" href="favicon_32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="favicon_64.png" sizes="64x64" />
-    <link rel="apple-touch-icon" href="favicon_64.png" /> -->
+	<link rel="shortcut icon" href="favicon-16x16.png" />	
+
+    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+	<link rel="icon" type="image/png" href="favicon-64x64.png" sizes="64x64" />
+	<link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96" />
+
+	<link rel="apple-touch-icon" type="image/png" href="apple-touch-icon-180x180.png" />
+	<link rel="apple-touch-icon-precomposed" type="image/png" href="apple-touch-icon-57x57.png" sizes="57x57" />
+	<link rel="apple-touch-icon-precomposed" type="image/png" href="apple-touch-icon-60x60.png" sizes="60x60" />
+	<link rel="apple-touch-icon-precomposed" type="image/png" href="apple-touch-icon-72x72.png" sizes="72x72" />
+	<link rel="apple-touch-icon-precomposed" type="image/png" href="apple-touch-icon-76x76.png" sizes="76x76" />
+	<link rel="apple-touch-icon-precomposed" type="image/png" href="apple-touch-icon-114x114.png" sizes="114x114" />
+	<link rel="apple-touch-icon-precomposed" type="image/png" href="apple-touch-icon-120x120.png" sizes="120x120" />
+	<link rel="apple-touch-icon-precomposed" type="image/png" href="apple-touch-icon-144x144.png" sizes="144x144" />
+	<link rel="apple-touch-icon-precomposed" type="image/png" href="apple-touch-icon-152x152.png" sizes="152x152" />
 
 	<!-- Twitter: see https://developer.twitter.com/en/docs/tweets/optimize-with-cards/overview/summary for details -->
 	<meta name="twitter:card" content="<%= options.twitter.card %>">
@@ -67,7 +77,7 @@
 			</intro>
 		
 			<comment class="m-bp">
-				<p>Witnessing on of the most important event in humans history – development of different forms 
+				<p>Witnessing of the most important event in humans history – development of different forms 
 					of Artificial Intelligence (AI)</p>
 			</comment>
 		
