fixed some links

--- a/src/index.html
+++ b/src/index.html
@@ -138,13 +138,13 @@
 			</comment>
 			
 			<div>
-				<a href="mailto:<%= options.contacts.twitter %>"><icon class="twitter"></icon></a>
-				<a href="mailto:<%= options.contacts.facebook %>"><icon class="facebook"></icon></a>
-				<a href="mailto:<%= options.contacts.instagram %>"><icon class="instagram"></icon></a>
-				<a href="mailto:<%= options.contacts.linkedin %>"><icon class="linkedin"></icon></a>
-				<a href="mailto:<%= options.contacts.medium %>"><icon class="medium"></icon></a>
-				<a href="mailto:<%= options.contacts.telegram %>"><icon class="telegram"></icon></a>
-				<a href="mailto:<%= options.contacts.steemit %>"><icon class="steemit"></icon></a>
+				<a href="<%= options.contacts.twitter %>"><icon class="twitter"></icon></a>
+				<a href="<%= options.contacts.facebook %>"><icon class="facebook"></icon></a>
+				<a href="<%= options.contacts.instagram %>"><icon class="instagram"></icon></a>
+				<a href="<%= options.contacts.linkedin %>"><icon class="linkedin"></icon></a>
+				<a href="<%= options.contacts.medium %>"><icon class="medium"></icon></a>
+				<a href="<%= options.contacts.telegram %>"><icon class="telegram"></icon></a>
+				<a href="<%= options.contacts.steemit %>"><icon class="steemit"></icon></a>
 			</div>
 
 		</div>
