--- a/src/index.html
+++ b/src/index.html
@@ -126,7 +126,7 @@
 			</comment>
 		
 			<h2 class="m-bp">Thus, our manifesto is the following:<br/>
-				the future for both humanity and AI and their successful cooperation – multiplicity, 
+				the future for both humanity and AI are in their successful cooperation – multiplicity, 
 				decentralization and open economy instead of governmental regulations and «AI ethics»</h2>
 		
 			<h1>#freeai<br/>
