--- a/src/index.html
+++ b/src/index.html
@@ -138,7 +138,7 @@
 			</comment>
 			
 			<div>
-				<a href="<%= options.contacts.twitter %>"><icon class="twitter"></icon></a>
+				<a href="<%= options.contacts.twitter %>" onclick="twttr.conversion.trackPid('nzsh8', { tw_sale_amount: 0, tw_order_quantity: 0 });"><icon class="twitter"></icon></a>
 				<a href="<%= options.contacts.facebook %>"><icon class="facebook"></icon></a>
 				<a href="<%= options.contacts.instagram %>"><icon class="instagram"></icon></a>
 				<a href="<%= options.contacts.linkedin %>"><icon class="linkedin"></icon></a>
@@ -153,16 +153,39 @@
 </div>
 <hfooter></hfooter>
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="//www.googletagmanager.com/gtag/js?id=UA-107738519-1"></script>
 <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', '<%= options.gacode %>', 'auto');
-  ga('send', 'pageview');
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+	gtag('config', 'UA-107738519-1');
 </script>
 
+<!-- Facebook Pixel Code -->
+<script>
+	!function(f,b,e,v,n,t,s)
+	{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+	n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+	if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+	n.queue=[];t=b.createElement(e);t.async=!0;
+	t.src=v;s=b.getElementsByTagName(e)[0];
+	s.parentNode.insertBefore(t,s)}(window, document,'script',
+	'//connect.facebook.net/en_US/fbevents.js');
+	fbq('init', '1183323611849350');
+	fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+src="//www.facebook.com/tr?id=1183323611849350&ev=PageView&noscript=1" /></noscript>
+<!-- End Facebook Pixel Code -->
+
+<!-- Twitter single-event website tag code -->
+<script src="//platform.twitter.com/oct.js" type="text/javascript"></script>
+<noscript>
+	<img height="1" width="1" style="display:none;" alt="" src="https://analytics.twitter.com/i/adsct?txn_id=nzsh8&p_id=Twitter&tw_sale_amount=0&tw_order_quantity=0" />
+	<img height="1" width="1" style="display:none;" alt="" src="//t.co/i/adsct?txn_id=nzsh8&p_id=Twitter&tw_sale_amount=0&tw_order_quantity=0" />
+</noscript>
+<!-- End Twitter single-event website tag code -->
 
 </body>
 </html>
