--- a/src/index.html
+++ b/src/index.html
@@ -137,8 +137,8 @@
 					or Tweet with hashtags #FreeAI #DecentralizeAI</p>
 			</comment>
 			
-			<div>
-				<a href="<%= options.contacts.twitter %>" onclick="twttr.conversion.trackPid('nzsh8', { tw_sale_amount: 0, tw_order_quantity: 0 });"><icon class="twitter"></icon></a>
+			<div style="display:none;">
+				<a href="<%= options.contacts.twitter %>"><icon class="twitter"></icon></a>
 				<a href="<%= options.contacts.facebook %>"><icon class="facebook"></icon></a>
 				<a href="<%= options.contacts.instagram %>"><icon class="instagram"></icon></a>
 				<a href="<%= options.contacts.linkedin %>"><icon class="linkedin"></icon></a>
@@ -179,13 +179,16 @@
 src="//www.facebook.com/tr?id=1183323611849350&ev=PageView&noscript=1" /></noscript>
 <!-- End Facebook Pixel Code -->
 
-<!-- Twitter single-event website tag code -->
-<script src="//platform.twitter.com/oct.js" type="text/javascript"></script>
-<noscript>
-	<img height="1" width="1" style="display:none;" alt="" src="https://analytics.twitter.com/i/adsct?txn_id=nzsh8&p_id=Twitter&tw_sale_amount=0&tw_order_quantity=0" />
-	<img height="1" width="1" style="display:none;" alt="" src="//t.co/i/adsct?txn_id=nzsh8&p_id=Twitter&tw_sale_amount=0&tw_order_quantity=0" />
-</noscript>
-<!-- End Twitter single-event website tag code -->
+<!-- Twitter universal website tag code -->
+<script>
+	!function(e,t,n,s,u,a){e.twq||(s=e.twq=function(){s.exe?s.exe.apply(s,arguments):s.queue.push(arguments);
+	},s.version='1.1',s.queue=[],u=t.createElement(n),u.async=!0,u.src='//static.ads-twitter.com/uwt.js',
+	a=t.getElementsByTagName(n)[0],a.parentNode.insertBefore(u,a))}(window,document,'script');
+	// Insert Twitter Pixel ID and Standard Event data below
+	twq('init','nzs1x');
+	twq('track','PageView');
+	</script>
+<!-- End Twitter universal website tag code -->
 
 </body>
 </html>
