--- a/src/keybase.html
+++ b/src/keybase.html
@@ -66,78 +66,54 @@
 
 			<h1 class="red">The #FreeAI Manifesto</h1>
 	
-			<intro>
-				Multiple 
-				artificial 
-				intelligences 
-				must not be 
-				censored<br/> 
-				or controlled<br/>
-				by anybody _
-			</intro>
-		
-			<comment class="m-bp">
-				<p>Witnessing of the most important event in humans history – development of different forms 
-					of Artificial Intelligence (AI)</p>
-			</comment>
-		
-			<h1>We Declare:</h1>
-			<h2>1. AI must not be censored</h2>
-		
-			<comment class="m-bp">
-				<p>Free market means uncensorability: resistance to regulations and attempts to define what's allowed and what's not; 
-					to attempts forcing free subjects to do or not to do something.</p>
-				<p>Thus, AI development and operations should rely on censorship-resistant technological stack.</p>	
-			</comment>
-		
-			<h2>2. AI must not be oligopolized or monopolized by corporations or governments</h2>
-		
-			<comment class="m-bp">
-				<p>Today,</p>
-				<p>AI needs data. Big <b>data</b>. But we are in big data oligopoly age.</p> 
-				<p>AI needs <b>fundamental research</b>. But researchers do not directly profit from their work: no economic incentives.</p> 
-				<p>AI needs <b>computing power</b>. But it is expensive and oligopolized.</p>
-				<p>We aim to create open, competitive and decentralized markets for big data, machine learning models and computation power.</p>
-			</comment>
-		
-			<h2>3. AI must not be singular</h2>
-		
-			<comment class="m-bp">
-				<p>Singular AI will create risks and danger for the whole humanity. We need multiple 
-					cooperative and competitive forms of AI to be evolving simultaneously.</p>
-			</comment>
-		
-			<h2>4. Multiple AIs must become parties involved into global economy</h2>
-		
-			<comment class="m-bp">
-				<p>Open economy brings trading instead of war; non-zero sum games instead of zero-sum.</p>
-				<p>AI and robots must be allowed to trade and become independent parties and players 
-					in the economy like legal entities and companies already became non-human parties of our economy, 
-					culture and civilization.</p>
-			</comment>
-		
-			<h2>5. AI must not be controlled by anybody</h2>
-		
-			<comment class="m-bp">
-				<p>By putting «noose around AI neck», creating «kill switches» for AI humanity and governments 
-					will just incentivize AI to fight cunningly against humanity which becomes a vital danger for AI.</p>
-				<p>Instead of being controlled by somebody, multiple AI must be independent and incentivized 
-					for cooperation via economy and trade.</p>
-			</comment>
-		
-			<h2 class="m-bp">Thus, our manifesto is the following:<br/>
-				the future for both humanity and AI are in their successful cooperation – multiplicity, 
-				decentralization and open economy instead of governmental regulations and «AI ethics»</h2>
-		
-			<h1>#freeai<br/>
-				#decentralizeai</h1>
+            <h1>Follow the instructions</h1>
+            
+            <comment class="m-b-40">
+                <p>
+                    1. Install (if you don't have) Keybase from <a href="https://keybase.io">https://keybase.io</a>. Press Create an account and follow the instructions on the screen to create your identity
+                </p>
+            </comment>
 
-			<h1 class="red">Support this manifesto</h1>
+            <comment class="m-b-40">
+                <p>
+                    2. If you don't have PGP at your Keybase, press Prove your identities → Create PGP key and follow instructions to set up your own key
+                </p>
+            </comment>
 
-			<a class="sign-via-keybase m-b-80" href="keybase.html" onclick="gtag('event','keybase',{'event_category':'signs','event_label':'click','value':0});
-			  ">Sign via Keybase</a>
-		
-			<comment class="m-b-40 social">
+            <comment class="m-b-40">
+                <p>
+                    3. Join <fr>freeai</fr> group – either with Keybase UI or using command
+                </p>
+            </comment>
+
+            <comment class="terminal m-b-40">
+                <p>
+                    keybase team request-access freeai
+                </p>
+            </comment>
+
+            <comment class="m-b-40">
+                <p>
+                    4. Perform the following commands:
+                </p>
+            </comment>
+
+            <comment class="terminal m-b-80">
+                <p>git clone keybase://team/freeai/freeai-manifesto</p>
+                <p>cd freeai-manifesto</p>
+                <p>keybase pgp sign -c -i the_freeai_manifesto.txt -o signatures/`keybase status | grep 'Username:' | awk '{print $2}'`</p>
+                <p>git add .</p>
+                <p>git commit -m "Signed by `keybase status | grep 'Username:' | awk '{print $2}'`"</p>
+                <p>git push</p>                
+            </comment>
+
+            <comment class="m-b-40">
+                <p>
+                    Done, you have signed The #FreeAI Manifesto!
+                </p>
+            </comment>
+
+            <comment class="m-b-40 social">
 				<div class="keybase">
 					<icon></icon> 
 					Join <a href="https://keybase.io/team/freeai">https://keybase.io/team/freeai</a>
@@ -147,8 +123,6 @@
 					Tweet with hashtags #FreeAI #DecentralizeAI
 				</div>
 			</comment>
-			
-			
 
 		</div>
 		<div class="col-1"></div>		
