--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
 		<div class="col-1"></div>
 		<div class="col-10">
 
-			<h1 class="red">The #FreeAI Manifesto</h1>
+			<div class="logo"></div>
 	
 			<intro>
 				Multiple 
@@ -132,7 +132,7 @@
 			<h1>#freeai<br/>
 				#decentralizeai</h1>
 
-			<h1 class="red">Support this manifesto</h1>
+			<h1 class="red glow support-this">Support this<br/> manifesto</h1>
 
 			<a class="sign-via-keybase m-b-80" href="keybase.html" onclick="gtag('event','keybase',{'event_category':'signs','event_label':'click','value':0});
 			  ">Sign via Keybase</a>
@@ -147,6 +147,8 @@
 					Tweet with hashtags #FreeAI #DecentralizeAI
 				</div>
 			</comment>
+
+			<div class="logo-bottom"></div>
 			
 			
 
