--- a/src/keybase.html
+++ b/src/keybase.html
@@ -64,7 +64,7 @@
 		<div class="col-1"></div>
 		<div class="col-10">
 
-			<h1 class="red">The #FreeAI Manifesto</h1>
+			<div class="logo"></div>
 	
             <h1>Follow the instructions</h1>
             
@@ -123,6 +123,8 @@
 					Tweet with hashtags #FreeAI #DecentralizeAI
 				</div>
 			</comment>
+
+			<div class="logo-bottom keybase"></div>
 
 		</div>
 		<div class="col-1"></div>		
