--- a/src/index.html
+++ b/src/index.html
@@ -77,7 +77,8 @@
 			</intro>
 		
 			<comment class="m-bp">
-				<p>Witnessing of the most important event in humans history – development of different forms 
+				<p>We are people believing in the progress, open economy, free markets, freedom. 
+					Witnessing of the most important event in humans history – development of different forms 
 					of Artificial Intelligence (AI)</p>
 			</comment>
 		
@@ -94,9 +95,11 @@
 		
 			<comment class="m-bp">
 				<p>Today,</p>
-				<p>AI needs data. Big <b>data</b>. But we are in big data oligopoly age.</p> 
-				<p>AI needs <b>fundamental research</b>. But researchers do not directly profit from their work: no economic incentives.</p> 
-				<p>AI needs <b>computing power</b>. But it is expensive and oligopolized.</p>
+				<ul>				
+					<li>AI needs <b>data</b>. Big data. But we are in big data oligopoly age.</li> 
+					<li>AI needs <b>fundamental research</b>. But researchers do not directly profit from their work: no economic incentives.</li> 
+					<li>AI needs <b>computing power</b>. But it is expensive and oligopolized.</li>
+				</ul>
 				<p>We aim to create open, competitive and decentralized markets for big data, machine learning models and computation power.</p>
 			</comment>
 		
@@ -119,22 +122,25 @@
 			<h2>5. AI must not be controlled by anybody</h2>
 		
 			<comment class="m-bp">
-				<p>By putting «noose around AI neck», creating «kill switches» for AI humanity and governments 
+				<p>By putting "noose around AI neck", creating "kill switches" for AI humanity and governments 
 					will just incentivize AI to fight cunningly against humanity which becomes a vital danger for AI.</p>
 				<p>Instead of being controlled by somebody, multiple AI must be independent and incentivized 
 					for cooperation via economy and trade.</p>
 			</comment>
 		
-			<h2 class="m-bp">Thus, our manifesto is the following:<br/>
-				the future for both humanity and AI are in their successful cooperation – multiplicity, 
-				decentralization and open economy instead of governmental regulations and «AI ethics»</h2>
+			<h2 class="with-comment">Thus, our manifesto is the following:</h2>
+
+			<comment>
+					the future for both humanity and AI are in their successful cooperation – multiplicity, 
+					decentralization and open economy instead of governmental regulations and "AI ethics"
+			</comment>
 		
-			<h1>#freeai<br/>
-				#decentralizeai</h1>
+			<h1 class="hash">#FreeAI<br/>
+				#DecentralizeAI</h1>
 
 			<h1 class="red glow support-this">Support this<br/> manifesto</h1>
 
-			<a class="sign-via-keybase m-b-80" href="keybase.html" onclick="gtag('event','keybase',{'event_category':'signs','event_label':'click','value':0});
+			<a class="sign-via-keybase m-bp" href="keybase.html" onclick="gtag('event','keybase',{'event_category':'signs','event_label':'click','value':0});
 			  ">Sign via Keybase</a>
 		
 			<comment class="m-b-40 social">
