--- a/src/keybase.html
+++ b/src/keybase.html
@@ -59,22 +59,22 @@
 
 <body>
 
-<div class="container">
+<div class="container keybase">
 	<div class="row">
 		<div class="col-1"></div>
 		<div class="col-10">
 
-			<div class="logo"></div>
+			<a href="index.html"><div class="logo"></div></a>
 	
             <h1>Follow the instructions</h1>
             
-            <comment class="m-b-40">
+            <comment class="m-bp">
                 <p>
                     1. Install (if you don't have) Keybase from <a href="https://keybase.io">https://keybase.io</a>. Press Create an account and follow the instructions on the screen to create your identity
                 </p>
             </comment>
 
-            <comment class="m-b-40">
+            <comment class="m-bp">
                 <p>
                     2. If you don't have PGP at your Keybase, press Prove your identities → Create PGP key and follow instructions to set up your own key
                 </p>
@@ -86,7 +86,7 @@
                 </p>
             </comment>
 
-            <comment class="terminal m-b-40">
+            <comment class="terminal">
                 <p>
                     keybase team request-access freeai
                 </p>
@@ -98,7 +98,7 @@
                 </p>
             </comment>
 
-            <comment class="terminal m-b-80">
+            <comment class="terminal">
                 <p>git clone keybase://team/freeai/freeai-manifesto</p>
                 <p>cd freeai-manifesto</p>
                 <p>keybase pgp sign -c -i the_freeai_manifesto.txt -o signatures/`keybase status | grep 'Username:' | awk '{print $2}'`</p>
@@ -107,16 +107,16 @@
                 <p>git push</p>                
             </comment>
 
-            <comment class="m-b-40">
+            <comment class="m-bp">
                 <p>
                     Done, you have signed The #FreeAI Manifesto!
                 </p>
             </comment>
 
-            <comment class="m-b-40 social">
+            <comment class="m-bp social">
 				<div class="keybase">
 					<icon></icon> 
-					Join <a href="https://keybase.io/team/freeai">https://keybase.io/team/freeai</a>
+					Join <a target="_blank" href="https://keybase.io/team/freeai">https://keybase.io/team/freeai</a>
 				</div>
 				<div class="twitter">
 					<icon></icon> 
