--- a/src/index.html
+++ b/src/index.html
@@ -25,12 +25,12 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	
-	<link rel="shortcut icon" href="favicon-16x16.png" />	
+	<link rel="shortcut icon" href="favicon-16x16.png?v=2" />	
 
-    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
-    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
-	<link rel="icon" type="image/png" href="favicon-64x64.png" sizes="64x64" />
-	<link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/png" href="favicon-16x16.png?v=2" sizes="16x16" />
+    <link rel="icon" type="image/png" href="favicon-32x32.png?v=2" sizes="32x32" />
+	<link rel="icon" type="image/png" href="favicon-64x64.png?v=2" sizes="64x64" />
+	<link rel="icon" type="image/png" href="favicon-96x96.png?v=2" sizes="96x96" />
 
 	<link rel="apple-touch-icon" type="image/png" href="apple-touch-icon-180x180.png" />
 	<link rel="apple-touch-icon-precomposed" type="image/png" href="apple-touch-icon-57x57.png" sizes="57x57" />
