--- a/src/index.html
+++ b/src/index.html
@@ -54,6 +54,8 @@
 	<meta property="og:description" content="<%= options.og.description %>" />
 	<meta property="og:url" content="<%= options.og.url %>" />
 	<meta property="og:image" content="<%= options.og.image %>" />
+	<meta property="og:image:width" content="<%= options.og.image_width %>" />
+	<meta property="og:image:height" content="<%= options.og.image_height %>" />
 
 </head>
 
