add gtag events

--- a/src/index.html
+++ b/src/index.html
@@ -142,13 +142,12 @@
 
 			<h1 class="red support-this" style="padding-top: 1.5em; color: white; font-size: 2.3em; filter: grayscale(100%);">Support this<br/> manifesto</h1>
 
-			<a style="filter: grayscale(100%);" class="sign-via-keybase m-bp" href="keybase.html" onclick="gtag('event','keybase',{'event_category':'signs','event_label':'click','value':0});
-			  ">Sign via Keybase</a>
+			<a style="filter: grayscale(100%);" class="sign-via-keybase m-bp" href="keybase.html" onclick="gtag('event', 'keybase.io', {'event_category': 'keybase', 'event_label': 'keybase_page', 'value': '' });">Sign via Keybase</a>
 		
 			<comment class="m-b-40 social">
 				<div class="keybase">
 					<icon></icon> 
-					Join <a href="https://keybase.io/team/freeai">https://keybase.io/team/freeai</a>
+					Join <a href="https://keybase.io/team/freeai" onclick="gtag('event', 'keybase.io/team/freeai', {'event_category': 'keybase', 'event_label': 'main_page', 'value': ''});">https://keybase.io/team/freeai</a>
 				</div>
 				<div class="twitter">
 					<icon></icon> 
