--- a/src/keybase.html
+++ b/src/keybase.html
@@ -118,7 +118,7 @@
             <comment class="m-bp social">
 				<div class="keybase">
 					<icon></icon> 
-					Join <a target="_blank" href="https://keybase.io/team/freeai">https://keybase.io/team/freeai</a>
+					Join <a target="_blank" href="https://keybase.io/team/freeai" onclick="gtag('event', 'keybase.io/team/freeai', {'event_category': 'keybase', 'event_label': 'keybase_page', 'value': ''});">https://keybase.io/team/freeai</a>
 				</div>
 				<div class="twitter">
 					<icon></icon> 
