--- a/src/index.html
+++ b/src/index.html
@@ -85,7 +85,7 @@
 			</comment>
 		
 			<h1>We Declare:</h1>
-			<h2>1. AI must not be censored</h2>
+			<h2><span class="anchor">1.</span> AI must not be censored</h2>
 		
 			<comment class="m-bp">
 				<p>Free market means uncensorability: resistance to regulations and attempts to define what's allowed and what's not; 
@@ -93,7 +93,7 @@
 				<p>Thus, AI development and operations should rely on censorship-resistant technological stack.</p>	
 			</comment>
 		
-			<h2>2. AI must not be oligopolized or monopolized by corporations or governments</h2>
+			<h2><span class="anchor">2.</span> AI must not be oligopolized or monopolized by corporations or governments</h2>
 		
 			<comment class="m-bp">
 				<p>Today,</p>
@@ -105,14 +105,14 @@
 				<p>We aim to create open, competitive and decentralized markets for big data, machine learning models and computation power.</p>
 			</comment>
 		
-			<h2>3. AI must not be singular</h2>
+			<h2><span class="anchor">3.</span> AI must not be singular</h2>
 		
 			<comment class="m-bp">
 				<p>Singular AI will create risks and danger for the whole humanity. We need multiple 
 					cooperative and competitive forms of AI to be evolving simultaneously.</p>
 			</comment>
 		
-			<h2>4. Multiple AIs must become parties involved into global economy</h2>
+			<h2><span class="anchor">4.</span> Multiple AIs must become parties involved into global economy</h2>
 		
 			<comment class="m-bp">
 				<p>Open economy brings trading instead of war; non-zero sum games instead of zero-sum.</p>
@@ -121,7 +121,7 @@
 					culture and civilization.</p>
 			</comment>
 		
-			<h2>5. AI must not be controlled by anybody</h2>
+			<h2><span class="anchor">5.</span> AI must not be controlled by anybody</h2>
 		
 			<comment class="m-bp">
 				<p>By putting "noose around AI neck", creating "kill switches" for AI humanity and governments 
@@ -132,17 +132,13 @@
 		
 			<h2 class="with-comment">Thus, our manifesto is the following:</h2>
 
-			<comment>
+			<comment class="white">
 					the future for both humanity and AI are in their successful cooperation – multiplicity, 
 					decentralization and open economy instead of governmental regulations and "AI ethics"
 			</comment>
 		
-			<h1 class="hash">#FreeAI<br/>
-				#DecentralizeAI</h1>
-
-			<h1 class="red support-this" style="padding-top: 1.5em; color: white; font-size: 2.3em; filter: grayscale(100%);">Support this<br/> manifesto</h1>
-
-			<a style="filter: grayscale(100%);" class="sign-via-keybase m-bp" href="keybase.html" onclick="gtag('event', 'keybase.io', {'event_category': 'keybase', 'event_label': 'keybase_page', 'value': '' });">Sign via Keybase</a>
+			<a class="sign-via-keybase m-bp" href="keybase.html" 
+			   onclick="gtag('event', 'keybase.io', {'event_category': 'keybase', 'event_label': 'keybase_page', 'value': '' });">Sign Manifesto</a>
 		
 			<comment class="m-b-40 social">
 				<div class="keybase">
@@ -151,11 +147,11 @@
 				</div>
 				<div class="twitter">
 					<icon></icon> 
-					Tweet with hashtags #FreeAI #DecentralizeAI
+					Share with <span class="link" onclick="gtag('event', 'twitter', {'event_category': 'share', 'event_label': 'main_page', 'value': ''});window.open('https://twitter.com/intent/tweet?text=I+do+support+The+%23FreeAI+Manifesto+%40FreeAIManifesto+and+proclaim+that+%23AI+must+be+multiple+and+not+censored+or+controlled+by+anybody&url=https%3A%2F%2Fmanifesto.ai', '_blank')">Twitter</span>
 				</div>
 			</comment>
 
-			<div style="filter: grayscale(100%);" class="logo-bottom"></div>
+			<div class="logo-bottom"></div>
 			
 			
 
