--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,7 @@
 		<div class="col-1"></div>
 		<div class="col-10">
 
-			<div class="logo"></div>
+			<h1 title="The #FreeAI Manifesto" class="logo"></h1>
 	
 			<intro>
 				Multiple 
@@ -77,6 +77,8 @@
 				or controlled<br/>
 				by anybody _
 			</intro>
+
+			<h1 class="title">The #FreeAI Manifesto</h1>
 		
 			<comment class="m-bp">
 				<p>We are people believing in the progress, open economy, free markets, freedom. 
