--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
 	<meta name="description" content="<%= options.description %>" />
 
 	<!-- Don't forget to set your site up: http://google.com/webmasters -->
-	<meta name="google-site-verification" content="" />
+	<meta name="google-site-verification" content="XVULYKngtNiiz0JjO8g1pT6JJjOlzQtdDqzWFcq3djE" />
 
 	<!-- Who owns the content of this site? -->
 	<meta name="Copyright" content="<%= options.copyright %>" />
